--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta description="jQuery плагин для сравнения картинок методом наложения">
 	<script src="js/jquery-2.1.0.min.js"></script>
-	<script src="js/jquery.comparer.js"></script>
+	<script src="js/jquery.befter.js"></script>
 
 	<style>
 		.comparer{ position: absolute; left:50%; top: 50%; margin-left: -250px; margin-top: -250px }
@@ -22,7 +22,7 @@
 
 <script>
 	$(window).load(function () {
-		$(".comparer").comparer();
+		$(".comparer").befter({color : 'blue'});
 	})
 </script>
 
