--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
 <p>Например, как у <a href = "http://ilyabirman.ru/projects/moscow-metro-old/">Ильи Бирмана</a></p>
 <p><img src="src/ib_m.png"></p>
 
-<pre><code>
-
-...
+<pre><code>...
 
 	<script src="js/jquery-2.1.0.min.js"></script>
 	<script src="js/jquery.befter.js"></script>
@@ -57,9 +55,7 @@
 	})
 </script>
 
-...
-
-</code></pre>
+...</code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
