--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <p>Например, как у <a href = "http://ilyabirman.ru/projects/moscow-metro-old/">Ильи Бирмана</a></p>
 <p><img src="src/ib_m.png"></p>
 
-<pre><code>...
+<pre>
+...
 
 	<script src="js/jquery-2.1.0.min.js"></script>
 	<script src="js/jquery.befter.js"></script>
@@ -55,7 +56,7 @@
 	})
 </script>
 
-...</code></pre>
+...</pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
