--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <p><img src="src/ib_m.png"></p>
 
 <pre>
-...
+<!--...
 
 	<script src="js/jquery-2.1.0.min.js"></script>
 	<script src="js/jquery.befter.js"></script>
@@ -56,7 +56,10 @@
 	})
 </script>
 
-...</pre>
+...
+	-->
+	
+</pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
