--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 <p><img src="src/ib_m.png"></p>
 
 <pre>
-<!--...
+<code>
+"...
 
 	<script src="js/jquery-2.1.0.min.js"></script>
 	<script src="js/jquery.befter.js"></script>
@@ -56,10 +57,7 @@
 	})
 </script>
 
-...
-	-->
-	
-</pre>
+..."</code></pre>
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
