--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script src="js/jquery-2.1.0.min.js"></script>
+    <script src="js/jquery.befter.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -31,11 +33,11 @@
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Befter.js</h3>
 
-<p>Плагин для сравнения картинок методом наложения. Работает по принципу до/после. Удобно использовать для отображения разичий между версиями.</p> 
+<p>Плагин для сравнения картинок методом наложения. Работает по принципу до/после. Удобно использовать для отображения различий между версиями.</p> 
 <p>Например, как у <a href = "http://ilyabirman.ru/projects/moscow-metro-old/">Ильи Бирмана</a></p>
 <p><img src="src/ib_m.png"></p>
 
-<pre>
+<!-- <pre>
 <code>
 "...
 
@@ -57,14 +59,22 @@
 	})
 </script>
 
-..."</code></pre>
+..."
+</code></pre> -->
 
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Пример использования</h3>
 
 <p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+
+
+  <div class="comparer">
+    <img src="http://placehold.it/500x500&text=1" >
+    <img src="http://placehold.it/500x500&text=2" > 
+  </div>
+
 
 <h3>
 <a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
@@ -87,6 +97,12 @@
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
+
+    <script>
+      $(window).load(function () {
+        $(".comparer").befter();
+      });
+    </script>
     
   </body>
 </html>
