--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 <h3>
 <a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Пример использования</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>Вот так вот</p>
 
 
-  <div class="comparer" style="height:500px;">
+  <div class="comparer" style="width:500px; height:500px;">
     <img src="http://placehold.it/500x500&text=1" >
     <img src="http://placehold.it/500x500&text=2" > 
   </div>
