--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
 
   <div class="comparer" style="width:500px; height:500px;">
-    <img src="http://placehold.it/500x500&text=1" >
-    <img src="http://placehold.it/500x500&text=2" > 
+    <img src="http://placehold.it/500x500&text=1" style="width:100%">
+    <img src="http://placehold.it/500x500&text=2" style="width:100%"> 
   </div>
 
 
