--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <![endif]-->
     <script src="js/jquery-2.1.0.min.js"></script>
     <script src="js/jquery.befter.js"></script>
+
+    <style>
+
+    .comparer img {
+      max-width: none;
+    }
+    </style>
+
   </head>
   <body>
     <div class="wrapper">
@@ -71,8 +79,8 @@
 
 
   <div class="comparer" style="width:500px; height:500px;">
-    <img src="http://placehold.it/500x500&text=1" style="width:100%">
-    <img src="http://placehold.it/500x500&text=2" style="width:100%"> 
+    <img src="http://placehold.it/500x500&text=1" >
+    <img src="http://placehold.it/500x500&text=2" > 
   </div>
 
 
