--- a/index.html
+++ b/index.html
@@ -2,17 +2,25 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="Befter.js – плагин для сравнения изображений">
+	<meta name="keywords" content="HTML,JavaScript,jQuery,плагины">
+	<meta name="author" content="Дмитрий Биличенко">
 	<title>Befter.js</title>
+	
 	<link rel="stylesheet" href="stylesheets/style.css">
 	<link rel="stylesheet" href="stylesheets/shThemeDefault.css">
 	<script src="javascripts/shCore.js"></script>	
 	<script src="javascripts/shLegacy.js"></script>	
 	<script src="javascripts/shBrushJScript.js"></script>	
+
+	<link rel="shortcut icon" type="image/png" href="src/favicon.ico"/>
+
 </head>
 <body>
 	
 	<header>
 		<img src="src/befter.png" alt="">
+   		<a href="https://github.com/billo32"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
    	</header>
 	
 	<section>
@@ -23,7 +31,7 @@
 			<li>различий на старых и новых фото</li>
 			<li>применения фото эффектов</li>
 		</ul>
-		<p>Такой же механизм использовал <a href="#">Илья Бирман</a> для наглядной демонстрации отличий на карте метро</p>
+		<p>Такой же механизм использовал <a href="http://ilyabirman.ru/projects/moscow-metro-old/">Илья Бирман</a> для наглядной демонстрации отличий на карте метро</p>
 		<div class="example">
 			<img src="src/birman_metro_map.png" alt="">
 			<p>Различия на карте метро</p>
