Обновлен index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 	<title>Befter.js</title>
 	<meta charset="UTF-8">
-	<meta description="jQuery плагин для сравнения картинок методом наложения">
+	<meta name="description" content="Befter.js – плагин для сравнения изображений">
+	<meta name="keywords" content="HTML,JavaScript,jQuery,плагины">
+	
+	<meta name="author" content="Дмитрий Биличенко">
 	<script src="js/jquery-2.1.0.min.js"></script>
 	<script src="js/jquery.befter.js"></script>
 
