--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 	
 	<header>
 		<img src="src/befter.png" alt="">
-   		<a href="https://github.com/billo32"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+   		
+   		<a href="https://github.com/billo32/befter.js/tree/master"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
    	</header>
 	
 	<section>
@@ -115,24 +116,22 @@
 
 	<section>
 		<h1>Скачать</h1>
-		<p>Проект на GitHub: <a href="https://github.com/billo32/befter.js">befter.js</a></p>
+		<p>Проект на GitHub: <a href="https://github.com/billo32/befter.js/tree/master">befter.js</a></p>
 		<p>Скачать ZIP : <a href="https://github.com/billo32/befter.js/zipball/master">https://github.com/billo32/befter.js/zipball/master</a></p>
 		<p>Скачать TAR : <a href="https://github.com/billo32/befter.js/tarball/master">https://github.com/billo32/befter.js/tarball/master</a></p>
 	</section>
 
 
-	<footer>2014 © <a href="https://github.com/billo32/befter.js">befter.js</a> | <a href="http://dmitrybilichenko.ru">dmitrybilichenko.ru</a></footer>
+	<footer>2014 © <a href="https://github.com/billo32/befter.js/tree/master">befter.js</a> | <a href="http://dmitrybilichenko.ru">dmitrybilichenko.ru</a></footer>
 
 	<script type="text/javascript">
 	    $(function () {
 	    	SyntaxHighlighter.all()
 	    });
-
 	    $(window).load(function(){
 	    	$('.comparer1').befter({position: '400px'})
 	    	$('.comparer2').befter({color: 'green', style: 'dashed', bold: '3px', position : '375px'});
 	    })
-
 	</script>
 
 </body>
