--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
 <body>
 	
 	<header>
-		<img src="src/befter.png" alt="">
+		<a href="http://billo32.github.io/befter.js/"><img src="src/befter.png" alt=""></a>
    		
    		<a href="https://github.com/billo32/befter.js/tree/master"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
    	</header>
 	
 	<section>
-		<p><b>Befter.js</b> – jQuery плагин для сравнения 2х картинок методом наложения одной на другую. Его удобно использовать для отображения различий, например:</p>
+		<p><b>Befter.js</b> – jQuery плагин для сравнения 2-х изображений методом наложения одного на другое. Такой метод удобно использовать для отображения различий, например:</p>
 		<ul>
 			<li>между версиями (whats new?)</li>
-			<li>сравнения дизайнов</li>
+			<li>при сравнении дизайнов</li>
 			<li>различий на старых и новых фото</li>
-			<li>применения фото эффектов</li>
+			<li>при применении фото-эффектов</li>
 		</ul>
-		<p>Такой же механизм использовал <a href="http://ilyabirman.ru/projects/moscow-metro-old/">Илья Бирман</a> для наглядной демонстрации отличий на карте метро</p>
+		<p>Такой же механизм использовал <a href="http://ilyabirman.ru/projects/moscow-metro-old/">Илья Бирман</a> для наглядной демонстрации изменений на карте метро.</p>
 		<div class="example">
 			<img src="src/birman_metro_map.png" alt="">
 			<p>Различия на карте метро</p>
