--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 	    $(function () {
 	    	SyntaxHighlighter.all()
 	    });
-	    $(window).load(function(){
+	    $(document).ready(function(){
 	    	$('.comparer1').befter({position: '400px'})
 	    	$('.comparer2').befter({color: 'green', style: 'dashed', bold: '3px', position : '375px'});
 	    })
