--- a/index.html
+++ b/index.html
@@ -9,21 +9,15 @@
 	
 	<link rel="stylesheet" href="stylesheets/style.css">
 	<link rel="stylesheet" href="stylesheets/shThemeDefault.css">
+	
 	<script src="javascripts/shCore.js"></script>	
 	<script src="javascripts/shLegacy.js"></script>	
 	<script src="javascripts/shBrushJScript.js"></script>	
-
 	<link rel="shortcut icon" type="image/png" href="src/favicon.ico"/>
 
 </head>
 
-<style>
-	.example{
-		display: none;
-	}
-
-</style>
-
+<style> .example{ display: none; } </style>
 
 <body>
 	
@@ -142,8 +136,6 @@
 	    	$('.comparer2').befter({color: 'green', style: 'dashed', bold: '3px', position : '375px'});
 	    });
 	    $(window).load(function(){
-	    	
-
 	    	$('.example').fadeIn('slow');
 	    })
 	</script>
